fix: added wrap to label container

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ body {
   display: flex;
   position: absolute;
   top: 80%;
+  flex-wrap: wrap;
 }
 
 .label {
